--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
             padding: 0 20px;
         } */
         .promo-banner {
-        background-color: #CC4E14; /* burnt orange */
+        background-color: #75270a; /* burnt orange */
             color: white;
             padding: 15px 25px;
             display: flex;
